# routes/seguridad.js
@@ -4,7 +4,7 @@ const router = express.Router();
 const jwt = require("jsonwebtoken");
 const auth = require("../seguridad/auth");
 
-let refreshTokens = [];
+
 const users = [
   {
     usuario: "admin",
@@ -18,6 +18,8 @@ const users = [
   },
 ];
 
+// avanzado!
+let refreshTokens = [];
 router.post("/api/token", (req, res) => {
   // #swagger.tags = ['Seguridad']
   // #swagger.summary = 'refresh token'
@@ -60,12 +62,13 @@ router.post("/api/login", (req, res) => {
   });
 
   if (user) {
-    // Generate an access token
+    // Generar access token
     const accessToken = jwt.sign(
       { usuario: user.usuario, rol: user.rol },
       auth.accessTokenSecret,
       { expiresIn: "20m" }
     );
+
     const refreshToken = jwt.sign(
       { usuario: user.usuario, rol: user.rol },
       auth.refreshTokenSecret
@@ -98,5 +101,67 @@ router.post("/api/logout", (req, res) => {
 
   res.json({ message });
 });
+
+
+const db = require("../base-orm/sequelize-init");
+const { QueryTypes } = require('sequelize');
+router.post("/api/loginsqlinjection", async (req, res) => {
+  // #swagger.tags = ['Seguridad']
+  // #swagger.summary = 'Login de usuarios con sqlinjection: "usuario": "\' or 1=1 --", "clave": "cualquier cosa"'
+
+  const { usuario, clave } = req.body;
+
+  let consulta = null;
+  let user = null;
+  
+  // query con sql injection
+
+  /*  // probar con postman enviando este body
+  {
+      "usuario": "' or 1=1 --", "clave": "cualquier cosa"
+  }
+  */
+
+  sql_injection = true;
+  if (sql_injection) {
+    let sql =  "SELECT Nombre as usuario, Rol rol FROM usuarios WHERE Nombre = '" + usuario + "' and Clave= '"+ clave +"'"
+    consulta = await db.sequelize.query( sql , {  type: QueryTypes.SELECT } );
+  }
+  else {
+    // evitando sql injection, usando parametros
+    let sql =  "SELECT Nombre as usuario, Rol rol FROM usuarios WHERE Nombre = :p_usuario and Clave= :p_clave ";
+    console.log(sql);
+    consulta = await db.sequelize.query( sql 
+      ,{replacements: { p_usuario: usuario, p_clave: clave }
+        ,type: QueryTypes.SELECT } );
+  }
+
+  if (consulta.length > 0 )  user = consulta[0];
+  
+  if (user) {
+    // Generar access token
+    const accessToken = jwt.sign(
+      { usuario: user.usuario, rol: user.rol },
+      auth.accessTokenSecret,
+      { expiresIn: "20m" }
+    );
+
+    const refreshToken = jwt.sign(
+      { usuario: user.usuario, rol: user.rol },
+      auth.refreshTokenSecret
+    );
+
+    refreshTokens.push(refreshToken);
+
+    res.json({
+      accessToken,
+      refreshToken,
+      message: "Bienvenido " + user.usuario + "!",
+    });
+  } else {
+    res.json({ message: "usuario or clave incorrecto" });
+  }
+});
+
 
 module.exports = router;
